# trial_cdk_python_structure

./: .flake8  .gitignore  .prettierrc.yml  Makefile  README.md  cdk.json  jest.config.js  package-lock.json  package.json  pyproject.toml
lib/: trial_cdk_python_structure-stack.ts
src/common/dataclasses/: __init__.py  load_environments.py
src/common/logger/: __init__.py  create_logger.py
src/handlers/: sample.py
src/layers/common/utils/dataclasses/: load_environments.py
src/layers/common/utils/logger/: logging_handler.py
src/utils/aws/: __init__.py  aws.py
src/utils/logger/: logging_function.py
test/: trial_cdk_python_structure.test.ts
tests/cdk/: trial_cdk_python_structure.test.ts
tests/unit/: conftest.py
tests/unit/fixtures/load_json/: sample.json
tests/unit/handlers/: test_sample.py
tests/unit/layers/common/utils/dataclasses/: test_load_environments.py
tests/unit/utils/dataclass/: test_load_environments.py
