[tool.poetry]
name = "trial-cdk-python-structure"
version = "0.1.0"
description = ""
authors = ["sinofseven <em.s.00001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
flake8-isort = "^6.1.1"
pytest = "^8.1.1"


[tool.poetry.group.public_layer.dependencies]
# arn:aws:lambda:ap-northeast-1:017000801446:layer:AWSLambdaPowertoolsPythonV2-Arm64:68
aws-lambda-powertools = {version = "2.36.0", extras = ["tracer"]}


[tool.poetry.group.common_layer.dependencies]
boto3 = "1.34.76"
boto3-stubs = {version = "1.34.76", extras = ["dynamodb", "s3", "sns", "sqs"]}

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
